{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "MovementMap",
            "id": "d87b1d11-743f-4f8c-8ca7-c9e52a2913fb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "61a05bb0-a986-4d96-ac2c-0be10d377411",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d3fabde7-8811-4002-bfb5-836aed9cb371",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "85b59a77-7449-40a6-9eb7-4c6b6be3cacf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RotationMap",
            "id": "14665c2d-22fe-4873-ab06-d7173e03ec3f",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "ab8dd8f9-c0e5-4a93-ac89-589c751d46c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "71bd6e11-cdab-4e65-b583-8e17f35a0bfb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "53619638-37f4-4c97-b488-5a587eed01f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ae8835f7-1bff-4cdb-acc6-4943cfc2ef38",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "AttackMap",
            "id": "53e6a625-360c-42b0-823f-86fe3e8b6418",
            "actions": [
                {
                    "name": "AttackSingleShoot",
                    "type": "Button",
                    "id": "052b0403-d90f-498f-bdef-a59f2df7460e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackMultipleShoot",
                    "type": "Button",
                    "id": "209c0c32-6d04-469e-a6a8-fdf9969f962d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "023916b8-e3ac-4e3a-89aa-390a18844694",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackSingleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "934afb01-1b4d-49c7-8c0e-5c0b9cd1bfc0",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackMultipleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}